Allow writing tests in Scala (2.11.4 version variant)